force-app/main/default/objects/Agreement__c/fields/Agreement_Name__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Name__c</fullName>
    <label>Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NDA Agreement</fullName>
            </value>
            <value>
                <fullName>PIS Agreement</fullName>
            </value>
            <value>
                <fullName>Reseller Agreement</fullName>
            </value>
            <value>
                <fullName>WL Agreement</fullName>
            </value>
            <value>
                <fullName>PSP Agreement</fullName>
            </value>
            <value>
                <fullName>Termination Agreement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>