force-app/main/default/objects/Agreement__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>