force-app/main/default/objects/Agreement__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>When Agreement is signed</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>