force-app/main/default/objects/Agreement__c/fields/Merchant_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Legal_Name__c</fullName>
    <label>Merchant Legal Name:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>