force-app/main/default/objects/Agreement__c/fields/Name_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Name_Hyperlink__c</fullName>
    <formula>CASE(Agreement_Name__c,
    &quot;Other&quot;, HYPERLINK(&quot;/&quot; &amp; Id, Other_Agreement__c),
    HYPERLINK(&quot;/&quot; &amp; Id, TEXT(Agreement_Name__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Name</label>
    <type>Text</type>
</CustomField>