force-app/main/default/objects/Agreement__c/fields/Noda_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Noda_Legal_Name__c</fullName>
    <label>Noda Legal Name:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>