force-app/main/default/objects/Agreement__c/fields/Other_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Other_Agreement__c</fullName>
    <label>Other Agreement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>