force-app/main/default/objects/Agreement__c/fields/Signed_By_Merchant__c.field-meta.xml
<CustomField>
    <fullName>Signed_By_Merchant__c</fullName>
    <label>Signed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>