force-app/main/default/objects/Agreement__c/validationRules/Other_Agreement_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Agreement_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Agreement_Name__c  , &apos;Other&apos;)
&amp;&amp;
ISBLANK( Other_Agreement__c )</errorConditionFormula>
    <errorMessage>Please, specify other agreement name!</errorMessage>
</ValidationRule>